<resources>
    <string name="app_name">Agence Touristique</string>
    <string name="creer_compte">Créer un compte</string>
    <string name="prenom">Prénom</string>
    <string name="nom">Nom</string>
    <string name="age">Âge</string>
    <string name="telephone">Téléphone</string>
    <string name="adresse">Adresse</string>
    <string name="ville">Ville</string>
    <string name="province">Province</string>
    <string name="courriel">Courriel</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="retour_connexion">Retour à la connexion</string>

    <string name="planed">Planed</string>
    <string name="saisir_e_mail">Saisir votre e-mail</string>
    <string name="saisir_mots_de_passe">Saisir votre mot de passe</string>
    <string name="connecter">Se connecter</string>
    <string name="logotravel">Logo de Traver</string>

    <string name="nouvelle_tache">Nouvelle tache</string>
    <string name="edition_tache">Edition tache</string>
    <string name="rechercher">Rechercher</string>
    <string name="ou_voulez_vous_aller">Où voulez-vous aller ?</string>
    <string name="accueil">Accueil</string>
    <string name="recherche">Recherche</string>
    <string name="historique">Historique</string>
    <string name="filtre">Filtre</string>
    <string name="compte">Compte</string>
    <string name="log_out">Déconnexion</string>

    <string name="popup_type">Type:</string>
    <string name="popup_budget">Budget:</string>
    <string name="popup_pays">Pays:</string>
    <string name="popup_date">Date:</string>

    <string name="type_filter">Filtrer par type…</string>
    <string name="budget_filter">Filtrer par budget…</string>
    <string name="pays_filter">Filtrer par pays…</string>
    <string name="date_filter">Filtrer par date…</string>

    <string name="image_du_voyage">Image du voyage</string>
    <string name="date_de_depart">Date de Départ :</string>
    <string name="nombre_de_places_souhaitees">Nombre de places souhaitées</string>
    <string name="reserver_maintenant">Réserver maintenant</string>
    <string name="message_erreur_reservation">Message d\'erreur si réservation impossible</string>

    <string name="historique_des_reservations">Historique des Réservations</string>
    <string name="nb_places_souhaitees">Nombre de places souhaitées</string>
    <string name="image_de_la_destination">Image de la destination</string>


    <string name="button_Home">btn_Home</string>
    <string name="button_Historique">btn_Historique</string>
    <string name="button_Logout">btn_Logout</string>

    <string name="filtrer_voyages">Filtrer Voyages</string>
    <string name="type_label">Type:</string>
    <string name="budget_label">Budget:</string>
    <string name="destination_label">Destination:</string>
    <string name="date_label">Date:</string>
    <string name="appliquer_filtres">Appliquer</string>
    <string name="destination_detail">Destination :</string>
    <string name="duree_detail">Durée :</string>
    <string name="prix_detail">Prix par personne :</string>
    <string name="profil">Profil</string>
    <string name="filtrer">Filtrer</string>
    <string name="historique_label">Historique</string>
    <string name="recherche_label">Recherche</string>
    <string name="accueil_label">Accueil</string>
    <string name="profile_label">Profil</string>
    <string name="annuler">Annuler</string>
    <string name="supprimer">Supprimer</string>
    <string name="image_de_reservation">Image de réservation</string>
    <string name="supprimer_la_r_servation">Supprimer la réservation</string>
    <string name="choisir_date_depart">Choisir une date de départ </string>

</resources>