<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#EAFAF1"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:text="@string/filtrer_voyages"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/type_label"
            android:textColor="@color/black_text"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/popupTypeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/spinner_background"
            android:entries="@array/type_options"
            android:minHeight="48dp"
            android:prompt="@string/type_filter"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/budget_label"
            android:textColor="@color/black_text"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/popupBudgetSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/spinner_background"
            android:entries="@array/budget_options"
            android:minHeight="48dp"
            android:prompt="@string/budget_filter"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/destination_label"
            android:textColor="@color/black_text"
            android:textSize="16sp"
            android:layout_marginBottom="4dp"/>

        <Spinner
            android:id="@+id/popupDestinationSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:entries="@array/destination_options"
            android:prompt="@string/pays_filter"
            android:spinnerMode="dropdown"
            android:background="@drawable/spinner_background"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_label"
            android:textColor="@color/black_text"
            android:textSize="16sp"
            android:layout_marginBottom="4dp"/>

        <Spinner
            android:id="@+id/popupDateSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:entries="@array/date_options"
            android:prompt="@string/date_filter"
            android:spinnerMode="dropdown"
            android:background="@drawable/spinner_background"/>
    </LinearLayout>

    <Button
        android:id="@+id/popupFilterButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/appliquer_filtres"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

</LinearLayout>